# godot-enet-sandbox

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  architecture.md  convert-to-subrepo.sh  publish.sh  setup-subrepo.sh
.github/workflows/: build.yml  docs.yml  release.yml
docs/: architecture.md  shell-injection.md
docs/examples/: README.md  elixir_npc_integration.exs  elixir_npc_integration.exs.md  godot_gdscript_networking.gd  integration_test.py  python_rl_stubs.py
docs/testing/: README.md
python-bridge/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
python-bridge/docs/: api.md
python-bridge/src/godot_enet_bridge/: __init__.py  client.py  protocol.py  server.py
python-bridge/tests/: __init__.py  test_client.py
riscv-toolchain/libriscv/examples/wasm/program/LuaJIT/src/: Makefile
riscv-toolchain/src/elf/: script_instance.h
tools/: gdscript_injector.sh
